# Manual2Vector

./: .dockerignore  .env  .env.ai  .env.ai.example  .env.auth  .env.auth.example  .env.clean  .env.database  .env.database.example  .env.example  .env.external  .env.external.example  .env.local.example  .env.old  .env.pipeline  .env.storage  .env.storage.example  .env.test  .git_commit_msg.txt  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ACTION_ITEMS_DEVOPS_TESTING.md  ACTION_ITEMS_DOCUMENT_PROCESSING.md  ACTION_ITEMS_SECURITY_PERFORMANCE.md  ADDITIONAL_FIXES.md  AGENT_SETUP.md  AGENT_TODO.md  APPLY_MIGRATION_12.md  APPLY_MIGRATION_13.md  CHUNK_LINKING_COMPLETE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIGURATION_SETUP.md  CUDA_SETUP.md  CUsershaastAppDataLocalTempdocx_text.txt  DATABASE_SCHEMA.md  DB_FIXES_CHECKLIST.md  DB_QUICK_REFERENCE.md  (+177 more)
.cursor/: mcp.json
.github/: copilot-instructions.md
backend/: .env  ERROR_CODE_FIXES.md  IMPLEMENTATION_COMPLETE.md  PROCESSING_FLOW_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_CONTENT_MANAGEMENT.md  SOLUTION_EXTRACTION_FORMATS.md  START_API_SERVER.bat  auth_implementation_plan.md  env.example  error_code_test_report.json  error_code_test_report.txt  main.py  main1.py  monitoring_server.py  process_service_manuals.py  process_service_manuals_direct.py  pytest.ini  requirements-minimal.txt  requirements.txt  simple_monitor.py  test_complete_pipeline_advanced.py  test_hardware_detection.py  test_hp_FIXED_VALIDATION.json  test_hp_FIXED_VALIDATION.txt  test_hp_NO_PART_NUMBERS.json  test_hp_NO_PART_NUMBERS.txt  test_hp_WITH_WILDCARDS.txt  test_hp_e778.txt  test_hp_e778_v2.json  test_hp_e778_v2.txt  test_integration.py  test_km_4750i.json  test_km_4750i.txt  test_km_4750i_v2.json  test_km_4750i_v2.txt  test_km_AFTER_FIX.json  test_km_AFTER_FIX.txt  test_km_FIXED.json  test_km_FIXED.txt  (+2 more)
benchmark-documents/: README.md
config/: production_test_thresholds.json
data/: lexmark_videos_2026-02-18.json
database/: CHANGELOG.md  PROCESSOR_TABLES_DB.md  README.md
database_migrations/: 01_krai_complete_schema.sql  02_security_and_rls.sql  03_performance_and_indexes.sql  04_extensions_and_storage.sql  04_rpc_functions_deduplication.sql  05_public_views_for_postgrest.sql  06_agent_views_complete.sql  06_fix_service_schema.sql  07_agent_memory_table.sql  08_link_video_enhancement.sql  09_error_code_ai_enhancement.sql  CLEAN_01_schema_and_tables.sql  CLEAN_03_indexes_performance.sql  CLEAN_MIGRATION_GUIDE.md  DATABASE_SCHEMA_DOCUMENTATION.md  add_links_and_figures.sql
docs/: AGENT_SYSTEM_MESSAGE_V2.2.md  AGENT_SYSTEM_MESSAGE_V2.3.md  AGENT_SYSTEM_MESSAGE_V2.4_FINAL.md  ARCHITECTURE.md  BRIGHTCOVE_INTEGRATION.md  CI_RUNNER_SETUP.md  CUDA_GPU_SETUP.md  DOCKER_SETUP_GUIDE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  ERROR_CODE_SYSTEM.md  (+33 more)
(+1622 files in other folders)
